--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,6 @@ spring:
           descriptor:
             sql:
               BasicBinder: TRACE
+weather:
+  url: "https://api.openweathermap.org"
+  secretKey: "20a49955dbcdc99ad6cfbaf22af8c3ee"
