함수형 인터페이스 연습

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>3.0.0</version>
         </dependency>
+
+        <!--spring-webflux -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+            <version>5.3.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
