--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,5 @@ spring:
             sql:
               BasicBinder: TRACE
 weather:
-  url: "https://api.openweathermap.org"
+  url: "https://api.openweathermap.org/"
   secretKey: "20a49955dbcdc99ad6cfbaf22af8c3ee"
